fix from michael

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -294,7 +294,7 @@
                 How much does it cost you to process a donation?
             </p>
             <p class="payment-faq-answer">
-                Credit cards cost us 1.4% plus 30c per donation. Bank transfers have no fees.
+                Credit card donations cost us 1.4% plus 30c per donation. Bank transfers have no fees.
             </p>
             <p class="payment-faq-question">
                 Which payment method do you prefer?
