send bank transfer instructions

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -374,7 +374,7 @@
 
             <div class="complete-other-info">
                 <p>
-                    (TODO still) We have also emailed you these instructions &ndash; please check your spam folder if you have not received them.
+                    We have also emailed you these instructions &ndash; please check your spam folder if you have not received them.
                 </p>
             </div>
             <p>
