add message about spam in step 3

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -321,7 +321,7 @@
                 100% of your donation will be granted to [[ selected_charity.name ]].
             </p>
             <div class="complete-other-info">
-                <p>Here is your <a href="[[receipt_url]]">receipt</a>. We've also emailed it to you.</p>
+                <p>Here is your <a href="[[receipt_url]]">receipt</a>. We have also emailed it to you &ndash; please check your spam folder if you have not received it.</p>
             </div>
             <div class="complete-other-info">
                 <h3>Any questions?</h3>
