--- a/donation/templates/bank_transfer_instructions.html
+++ b/donation/templates/bank_transfer_instructions.html
@@ -6,7 +6,7 @@
 <body>
 <p>Dear {{ pledge.name }},</p>
 
-<p>You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of your donation will go directly to helping people through {{ pledge.recipient_org.name }} and send you a tax deductible receipt.</p>
+<p>You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of your donation will go directly to helping people through {{ partner_charity }} and send you a tax deductible receipt.</p>
 
 <h3>What to do next?</h3>
 Please make sure that you complete the process by {% if pledge.recurring %}setting up a monthly periodic payment for {% else %}making a bank transfer of {% endif %}
