bank transfer email fixes

--- a/donation/templates/bank_transfer_instructions.html
+++ b/donation/templates/bank_transfer_instructions.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><div class="htmlmail-body">
 </head>
 <body>
-<p>Dear {{ pledge.name }},</p>
+<p>Dear {{ pledge.first_name }},</p>
 
 <p>You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of your donation will go directly to helping people through {{ partner_charity }} and send you a tax deductible receipt.</p>
 
