--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -40,11 +40,13 @@
     <link href="{% static 'css/process_steps.css' %}" type="text/css" media="all" rel="stylesheet">
     <link href="{% static 'css/credit_card.css' %}" type="text/css" media="all" rel="stylesheet">
     <script type="text/javascript" src="{% static 'js/charities.js' %}"></script>
-
+    <script type="text/javascript" src="https://cdn.ravenjs.com/3.10.0/raven.min.js"></script>
+    <script type="text/javascript">
+        Raven.config('https://1c3aafc3a7c54fb5b35d5d33015fbe57@sentry.draftable.com/26').install()
+    </script>
     {% pin_header %}
 
 </head>
-
 <body>
 
 
