paypal form slows down page

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -274,7 +274,7 @@
         </form>
 
         <div align="center" id="id_paypal" class="payment_option [[pmt_method != '4' ? 'collapse' : '' ]]">
-            {{ paypal_form.render }}
+            {# paypal_form.render #}
         </div>
         <div class="payment-faq">
             <h3>Donation FAQ</h3>
