--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -276,8 +276,8 @@
         <div align="center" id="id_paypal" class="payment_option [[pmt_method != '4' ? 'collapse' : '' ]]">
             {# paypal_form.render #}
         </div>
-        <div class="payment-faq">
-            <h3>Donation FAQ</h3>
+        <div class="details-section payment-faq">
+            <h2>Donation FAQ</h2>
             <p class="payment-faq-question">
                 What credit cards do you accept?
             </p>
