--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -273,13 +273,13 @@ p.help-text {
 }
 
 .payment-faq {
-    padding-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 30px;
 }
-.payment-faq-question {
+
+.payment-faq .payment-faq-question {
     font-weight: bold;
     margin-bottom: 0;
 }
-.payment-faq-answer {
+.payment-faq  .payment-faq-answer {
     margin-bottom: 20px;
 }
