--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -290,8 +290,8 @@
             </p>
             <p class="payment-faq-answer">
                 Yes. Your credit card details are encrypted and submitted directly from your web browser to our
-                payment processor, Pin Payments (ABN: 46 154 451 582). We do not store your credit card details
-                &ndash; in fact, we never see them.
+                payment processor, Pin Payments (ABN: 46 154 451 582). Our accounting staff only have access to
+                the last 4 digits of your credit card number.
             </p>
             <p class="payment-faq-question">
                 How much does it cost you to process a donation?
