--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -39,7 +39,18 @@ h3 {
     display: -moz-inline-stack;
     display: inline-block;
     vertical-align: middle;
+
+
+    border: 1px solid #aaa;
+    border-radius: 2px;
     margin: 12px;
+
+    -webkit-transition: border-color 0.4s ease-in-out;
+    transition: border-color 0.4s ease-in-out;
+}
+
+.charity:hover {
+    border: 1px solid #4c8fb1;
 }
 
 .charity .hover-overlay {
@@ -62,8 +73,6 @@ h3 {
     display: flex;
     height: 165px;
     width: 250px;
-    border: 1px solid #A3A3A4;
-    border-radius: 2px;
 }
 
 .charity-info .charity-img {
@@ -91,8 +100,13 @@ h3 {
     /*transition: all 0.4s ease-in-out;*/
 /*}*/
 
-.charity a.charity-details {
-    display: inline-block;
+.charity .charity-details {
+    cursor:pointer;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     text-decoration: none;
     color: #fff;
     font-weight: normal;
@@ -102,8 +116,7 @@ h3 {
     bottom: 0;
     right: 0;
     left: 0;
-    padding: 30px 15px;
-
+    padding: 10px 10px;
     /* Transition */
     background-color: transparent;
     opacity: 0;
@@ -116,7 +129,7 @@ h3 {
     transition: all 0.4s ease-in-out;
 }
 
-.charity:hover a.charity-details {
+.charity:hover .charity-details {
     background-color: #4c8fb1;
     opacity: 1;
     filter: alpha(opacity=100);
@@ -125,11 +138,16 @@ h3 {
     /*transform: scale(1);*/
 }
 
-.charity-title,
-.charityClick {
+.charity-title {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+}
+
+.selected-charity {
+    /*rgba(0,0,0,0.54)*/
+    border: 4px solid #4c8fb1 !important;
+    margin: 9px !important;
 }
 
 .selected-charity-box {
