fix amf opening inside donation frame

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -92,13 +92,13 @@
     [[#if selected_charity && selected_charity.name==='Against Malaria Foundation' && step === 2]]
     <div class="donation-step" id="step-2">
         <div class="selected-charity-box">
-            <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86'>
+            <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86' target="_blank">
             <img class="charity-img" src="static/[[ selected_charity.website_image ]]">
             </a>
             <p class="donation-info">
                 Donations to the Against Malaria Foundation are tax deductible in Australia.
                 We prefer that you donate to the Against Malaria Foundation directly at
-                <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86'>https://www.againstmalaria.com/Donation.aspx?GroupID=86</a>.
+                <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86' target="_blank">https://www.againstmalaria.com/Donation.aspx?GroupID=86</a>.
             </p>
         </div>
     </div>
