Spreadsheet download of all bank transfer data

--- a/donation/templates/reconciliation.html
+++ b/donation/templates/reconciliation.html
@@ -50,6 +50,9 @@
 <p>Download all transactions in a format suitable for dividing up by charity and sharing with them.</p>
 <p>You have to filter manually for the dates and charities you're interested in.</p>
 <button class="btn-primary" onclick="window.location.href = '{% url 'download-transactions' %}'">Download transactions</button>
+<h2>Download all donation data</h2>
+<p>Download all donation data. You should not share this with charities or partners without sanitizing it.</p>
+<button class="btn-primary" onclick="window.location.href = '{% url 'download-all-data' %}'">Download all data</button>
 <h2>
     Transactions that are not reconciled to Pledges
 </h2>
