--- a/donation/templates/reconciliation.html
+++ b/donation/templates/reconciliation.html
@@ -34,16 +34,22 @@
 </h2>
     <table>
         <th>Charity</th>
-        <th style="text-align: right;">Amount</th>
-        {% for charity, total in totals %}
+        <th style="text-align: right;">Bank</th>
+        <th style="text-align: right;">Credit card</th>
+        <th style="text-align: right;">Total</th>
+        {% for partner, partner_total in totals %}
         <tr>
-            <td>{{ charity }}</td>
-            <td style="text-align: right;">{{ total|floatformat:'2'|intcomma }}</td>
+            <td>{{ partner }}</td>
+            <td style="text-align: right;">{{ partner_total.bank|floatformat:'2'|intcomma }}</td>
+            <td style="text-align: right;">{{ partner_total.credit_card|floatformat:'2'|intcomma }}</td>
+            <td style="text-align: right;">{{ partner_total.total|floatformat:'2'|intcomma }}</td>
         </tr>
         {% endfor %}
         <tr>
             <td><b>Total</b></td>
-            <td><b>{{ grand_total|floatformat:'2'|intcomma }}</b></td>
+            <td style="text-align: right;"><b>{{ grand_total.bank|floatformat:'2'|intcomma }}</b></td>
+            <td style="text-align: right;"><b>{{ grand_total.credit_card|floatformat:'2'|intcomma }}</b></td>
+            <td style="text-align: right;"><b>{{ grand_total.total|floatformat:'2'|intcomma }}</b></td>
         </tr>
     </table>
 <p style="margin-top: 20px;">You can download details of the donations <a href="{% url 'export-page' %}">here</a>. </p>
