Allow import of transactions from westpac from eofy receipts and crm

--- a/donation/templates/export.html
+++ b/donation/templates/export.html
@@ -30,7 +30,7 @@
 <p>Download full donation data. You might need to sanitize this before sharing it with charities or partners.</p>
 <button class="btn-primary" onclick="window.location.href = '{% url 'download-full-spreadsheet' %}'">Download full data</button>
 <p style="margin-top: 20px;">
-    Note: neither of the above include donations received at the Westpac account in our early days.
+    Note (12 Jul 17): These now include donations received at the Westpac account in our early days.
 </p>
 </body>
 </html>
