--- a/donation/templates/receipts/receipt_base.html
+++ b/donation/templates/receipts/receipt_base.html
@@ -263,6 +263,7 @@
       {% block content %}{% endblock content %}
     </div>
     <div class="receipt-footer">
+      {% block above_footer %}{% endblock above_footer %}
       <div class="footer-content">
         <hr>
         <p>
