--- a/pinpayments/templates/pinpayments/pin_headers.html
+++ b/pinpayments/templates/pinpayments/pin_headers.html
@@ -1,4 +1,4 @@
-<script src='https://{{ pin_host }}/pin.js' type='text/javascript'></script>
+<script src='https://cdn.pin.net.au/pin.js' type='text/javascript'></script>
 <script type='text/javascript'>
     $(function() {
         Pin.setPublishableKey('{{ pin_public_key }}');
