add referral source

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -188,6 +188,7 @@
                                 <option value="Search engine (Google etc.)">Search engine (Google etc.)</option>
                                 <option value="Friend">Friend</option>
                                 <option value="Giving What We Can">Giving What We Can</option>
+                                <option value="Ezra Justin's Bar-mitzvah">Ezra Justin's Bar-mitzvah</option>
                             </select>
                         </div>
                     </div>
