--- a/pinpayments/templates/pinpayments/pin_headers.html
+++ b/pinpayments/templates/pinpayments/pin_headers.html
@@ -1,4 +1,8 @@
-<script src='https://cdn.pin.net.au/pin.js' type='text/javascript'></script>
+{% load static from staticfiles %}
+<script type='text/javascript'>
+    this.pin_environment = '{{ pin_environment }}';
+</script>
+<script src='{% static 'js/eaa-pin.js' %}' type='text/javascript'></script>
 <script type='text/javascript'>
     $(function() {
         Pin.setPublishableKey('{{ pin_public_key }}');
