Use pypi version of pinpayments app (1/2)

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 {% load bootstrap3 %}
 {% load static from staticfiles %}
-{% load pin_payment_tags %}
+{% load modified_pin_payment_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
