Update the EOFY receipt template to include pledge components

--- a/donation/templates/receipts/eofy_receipt_page_2.html
+++ b/donation/templates/receipts/eofy_receipt_page_2.html
@@ -12,7 +12,7 @@
           <td>{{ donation.date }}</td>
           <td>{{ donation.amount }}</td>
           <td>{{ donation.payment_method }}</td>
-          <td>{{ donation.pledge.recipient_org }}</td>
+          <td>{{ donation.component_summary_str }}</td>
         </tr>
       {% endfor %}
     </tbody>
