Create model form and model formset for validating and saving pledge and components in a transaction

--- a/donation/templates/bank_transfer_instructions.html
+++ b/donation/templates/bank_transfer_instructions.html
@@ -10,7 +10,7 @@
 
 <h3>What to do next?</h3>
 Please make sure that you complete the process by {% if pledge.recurring %}setting up a monthly periodic payment for {% else %}making a bank transfer of {% endif %}
-<strong>${{ pledge.amount }}</strong> to<br>
+<strong>${{ pledge.amount_from_components }}</strong> to<br>
 <strong>Account Name: </strong>Effective Altruism Australia<br>
 <strong>BSB:</strong> 083170<br>
 <strong>Account No:</strong> 306556167<br>
