--- a/donation/templates/pledge_new.html
+++ b/donation/templates/pledge_new.html
@@ -2,9 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-        {% render_bundle 'donation_form' 'css' %}
+    <script type='text/javascript'>
+        var pin_environment = "{{ pin_environment }}";
+        var presetCharity = "{{ charity }}";
+    </script>
+    <script src='/static/js/eaa-pin.js' type='text/javascript'></script>
+    <script type='text/javascript'>
+        Pin.setPublishableKey("{{ pin_key }}");
+    </script>
+    {% render_bundle 'donation_form' 'css' %}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -17,7 +25,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css" integrity="" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css"
+          integrity="" crossorigin="anonymous">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -29,28 +38,26 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Payment wizard with react</title>
-  </head>
-  <body>
-  <script>
-      var presetCharity = "{{ charity }}";
-  </script>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<noscript>
+    You need to enable JavaScript to run this app.
+</noscript>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
+
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
 
 
-  </body>
+</body>
 {% render_bundle 'donation_form' 'js' %}
 
 </html>
