Tweaking where static and webpack files are stored

--- a/donation/templates/donation_form.html
+++ b/donation/templates/donation_form.html
@@ -22,8 +22,8 @@
 
       note: manifest.json and favicon.ico can be removed. Leaving in here to show how to use %PUBLIC_URL%
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="static/manifest.json">
+    <link rel="shortcut icon" href="static/favicon.ico">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css"
           integrity="" crossorigin="anonymous">
