Make old donation form work with pledge components #60

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -77,7 +77,7 @@
                 <div class="charity">
                     <div class="charity-info">
                         <img class="charity-img" style="margin-top:[[ image_top_margin ]]px;"
-                             src="static/[[ website_image ]]" alt="[[ website_label ]]">
+                             src="/static/[[ website_image ]]" alt="[[ website_label ]]">
                         <span class="charity-title">[[ website_label ]]</span>
                     </div>
                     <div class="hover-overlay">
@@ -95,7 +95,7 @@
     <div class="donation-step" id="step-2">
         <div class="selected-charity-box">
             <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86' target="_blank">
-            <img class="charity-img" src="static/[[ selected_charity.website_image ]]">
+            <img class="charity-img" src="/static/[[ selected_charity.website_image ]]">
             </a>
             <p class="donation-info">
                 Donations to the Against Malaria Foundation are tax deductible in Australia.
