--- a/donation/templates/reconciliation.html
+++ b/donation/templates/reconciliation.html
@@ -57,7 +57,7 @@
     </table>
 <p style="margin-top: 20px;">You can download details of the donations <a href="{% url 'export-page' %}">here</a>. </p>
 <h2>
-    Transactions that are not reconciled to Pledges
+    Bank transactions that are not reconciled to Pledges
 </h2>
     <table>
         <th>Date</th>
