CSS hacks to make form work with wordpress

--- a/donation/templates/donation_form.html
+++ b/donation/templates/donation_form.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css"
           integrity="" crossorigin="anonymous">
 
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -44,7 +45,7 @@
 
 
 </body>
-<script src="http://127.0.0.1:8000/pledge.js"></script>
+<script src="/pledge.js"></script>
 
     <script type='text/javascript'>
         Pin.setPublishableKey("{{ pin_key }}");
