--- a/react/apps/donation_form/main.css
+++ b/react/apps/donation_form/main.css
@@ -1,35 +1,39 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 
 .charity {
-  border: 1px solid #888;
+    border: 1px solid #888;
 }
 
 .outlined {
@@ -52,10 +56,11 @@ pre.fwoop {
 
 input[type="radio"] {
     /*visibility:hidden;*/
-    position:fixed;opacity:0
+    position: fixed;
+    opacity: 0
 }
 
-input[type="radio"]:checked+label {
+input[type="radio"]:checked + label {
     /*background: blue;*/
     border-color: blue;
     /*font-weight:bold;*/
@@ -77,39 +82,42 @@ input[type="radio"]:checked+label {
     border-color: #adadad;
 }
 
-.donation-amount-group input:first-child + label{
+.donation-amount-group input:first-child + label {
     margin-left: 0;
 }
-.donation-amount-group label{
+
+.donation-amount-group label {
     display: inline-block;
     float: left;
     margin-left: 3px;
     margin-right: 3px;
     min-width: 86px;
 }
+
 .amount-input-wrapper {
     float: left;
     margin-left: 3px;
     margin-right: 3px;
 }
+
 .frequency-options {
     display: inline-block;
 }
 
-.frequency-options label{
+.frequency-options label {
     margin-left: 12px;
     min-width: 86px;
 }
 
-.frequency-options input:first-child + label{
+.frequency-options input:first-child + label {
     margin-left: 0;
 }
 
-.payment-options label{
+.payment-options label {
     margin-left: 12px;
 }
 
-.payment-options input:first-child + label{
+.payment-options input:first-child + label {
     margin-left: 0;
 }
 
@@ -131,7 +139,6 @@ input[type="radio"]:checked+label {
 }
 
 
-
 .donation-form input[type=number]::-webkit-inner-spin-button,
 .donation-form input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
@@ -140,7 +147,7 @@ input[type="radio"]:checked+label {
 
 
 .donation-form input[type=number] {
-    -moz-appearance:textfield;
+    -moz-appearance: textfield;
 }
 
 .amount-input {
@@ -169,7 +176,7 @@ input[type="radio"]:checked+label {
 }
 
 
-.gift-date-form .form-control{
+.gift-date-form .form-control {
     min-height: 37px;
 }
 
@@ -177,7 +184,7 @@ input[type="radio"]:checked+label {
     padding: 1px;
 }
 
-.Select.form-control .Select-control{
+.Select.form-control .Select-control {
     height: 100%;
     border: none;
 }
@@ -200,4 +207,18 @@ input[type="radio"]:checked+label {
 .selected-charity-box p.donation-info {
     text-align: left;
     margin: 0 0 0 12px;
+}
+
+.btn-default, .btn-primary, .btn-subscribe {
+    text-transform: none;
+    text-shadow: none;
+}
+
+.h3 {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.multi-form-group {
+    margin-left: 5px;
 }
