Do not include EAA or unallocated in the component list for gift certificates

--- a/donation/templates/gift_message.html
+++ b/donation/templates/gift_message.html
@@ -78,7 +78,7 @@
 
 
 
-    {% for component in donation.components.all %}
+    {% for component in components %}
         <table cellpadding="0" cellspacing="0" class="es-content" align="center"
                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;">
             <tr style="border-collapse:collapse;">
