Use new email template for EOFY email body

--- a/donation/templates/receipts/receipt.html
+++ b/donation/templates/receipts/receipt.html
@@ -1,4 +1,4 @@
-{% extends 'email_base.html' %}
+{% extends 'receipts/receipt_base.html' %}
 {% block content %}
   <h2>Donation Receipt</h2>
   <p>
