--- a/donation/templates/gift_message.html
+++ b/donation/templates/gift_message.html
@@ -12,70 +12,71 @@
 {% endblock content %}
 
 {% block extracontent %}
-    <table cellpadding="0" cellspacing="0" class="es-content" align="center"
-           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;">
-        <tr style="border-collapse:collapse;">
-            <td align="center" style="padding:0;Margin:0;">
-                <table class="es-content-body" align="center" cellpadding="0" cellspacing="0" width="600"
-                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#FFFFFF;">
-                    <tr style="border-collapse:collapse;">
-                        <td align="left" style="padding:0;Margin:0;">
-                            <table cellpadding="0" cellspacing="0" width="100%"
-                                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
-                                <tr style="border-collapse:collapse;">
-                                    <td width="600" align="center" valign="top" style="padding:0;Margin:0;">
-                                        <table cellpadding="0" cellspacing="0" width="100%"
-                                               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
-                                            <tr style="border-collapse:collapse;">
-                                                <td align="center" height="20" bgcolor="#f6f6f6"
-                                                    style="padding:0;Margin:0;"></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-    <table cellpadding="0" cellspacing="0" class="es-content" align="center"
-           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;">
-        <tr style="border-collapse:collapse;">
-            <td align="center" style="padding:0;Margin:0;">
-                <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0"
-                       cellspacing="0" width="600"
-                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#FFFFFF;">
-                    <tr style="border-collapse:collapse;">
-                        <td align="left" style="padding:20px;Margin:0;">
-                            <table cellpadding="0" cellspacing="0" width="100%"
-                                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
-                                <tr style="border-collapse:collapse;">
-                                    <td width="560" align="center" valign="top" style="padding:0;Margin:0;">
-                                        <table cellpadding="0" cellspacing="0" width="100%"
-                                               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
-                                            <tr style="border-collapse:collapse;">
-                                                <td align="left"
-                                                    style="padding:0;Margin:0;padding-bottom:20px;"><h2
-                                                        style="Margin:0;line-height:29px;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:24px;font-style:normal;font-weight:normal;color:#333333;">
-                                                    Message from {{ pledge.first_name }}</h2></td>
-                                            </tr>
-                                            <tr style="border-collapse:collapse;">
-                                                <td align="left" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica,
+    {% if pledge.gift_personal_message %}
+        <table cellpadding="0" cellspacing="0" class="es-content" align="center"
+               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;">
+            <tr style="border-collapse:collapse;">
+                <td align="center" style="padding:0;Margin:0;">
+                    <table class="es-content-body" align="center" cellpadding="0" cellspacing="0" width="600"
+                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#FFFFFF;">
+                        <tr style="border-collapse:collapse;">
+                            <td align="left" style="padding:0;Margin:0;">
+                                <table cellpadding="0" cellspacing="0" width="100%"
+                                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
+                                    <tr style="border-collapse:collapse;">
+                                        <td width="600" align="center" valign="top" style="padding:0;Margin:0;">
+                                            <table cellpadding="0" cellspacing="0" width="100%"
+                                                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
+                                                <tr style="border-collapse:collapse;">
+                                                    <td align="center" height="20" bgcolor="#f6f6f6"
+                                                        style="padding:0;Margin:0;"></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        <table cellpadding="0" cellspacing="0" class="es-content" align="center"
+               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;">
+            <tr style="border-collapse:collapse;">
+                <td align="center" style="padding:0;Margin:0;">
+                    <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0"
+                           cellspacing="0" width="600"
+                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#FFFFFF;">
+                        <tr style="border-collapse:collapse;">
+                            <td align="left" style="padding:20px;Margin:0;">
+                                <table cellpadding="0" cellspacing="0" width="100%"
+                                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
+                                    <tr style="border-collapse:collapse;">
+                                        <td width="560" align="center" valign="top" style="padding:0;Margin:0;">
+                                            <table cellpadding="0" cellspacing="0" width="100%"
+                                                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
+                                                <tr style="border-collapse:collapse;">
+                                                    <td align="left"
+                                                        style="padding:0;Margin:0;padding-bottom:20px;"><h2
+                                                            style="Margin:0;line-height:29px;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:24px;font-style:normal;font-weight:normal;color:#333333;">
+                                                        Message from {{ pledge.first_name }}</h2></td>
+                                                </tr>
+                                                <tr style="border-collapse:collapse;">
+                                                    <td align="left" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica,
  sans-serif;line-height:21px;color:#333333;">{{ pledge.gift_personal_message }}</p></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    {% endif %}
 
 
     {% for component in components %}
@@ -234,7 +235,11 @@
                                             <tr style="border-collapse:collapse;">
                                                 <td align="left" style="padding:0;Margin:0;"><p
                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
-                                                    Effective Altruism Australia partners with charities evaluated to be implementing the most transparent, cost-effective, and evidence-based programs for saving and improving lives. Your donation will go directly to support their programs, thereby helping to end poverty as soon as possible. </p>
+                                                    Effective Altruism Australia partners with charities evaluated to be
+                                                    implementing the most transparent, cost-effective, and
+                                                    evidence-based programs for saving and improving lives. Your
+                                                    donation will go directly to support their programs, thereby helping
+                                                    to end poverty as soon as possible. </p>
 
                                             </tr>
                                             <tr style="border-collapse:collapse;"></tr>
