--- a/donation/templates/gift_message.html
+++ b/donation/templates/gift_message.html
@@ -64,7 +64,7 @@
                                                 </tr>
                                                 <tr style="border-collapse:collapse;">
                                                     <td align="left" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica,
- sans-serif;line-height:21px;color:#333333;">{{ pledge.gift_personal_message }}</p></td>
+ sans-serif;line-height:21px;color:#333333;">{{ pledge.gift_personal_message|linebreaksbr }}</p></td>
                                                 </tr>
                                             </table>
                                         </td>
