--- a/donation/templates/bank_transfer_instructions.html
+++ b/donation/templates/bank_transfer_instructions.html
@@ -9,8 +9,8 @@
     <h3>What to do next?</h3>
     Please make sure that you complete the process by {% if pledge.recurring %}setting up a monthly periodic payment for
 {% else %}making a bank transfer of {% endif %}
-    <strong>${{ pledge.amount }}</strong> to<br>
-    <strong>Account Name: </strong>Effective Altruism Australia<br>
+    <strong>${{ pledge.amount }}</strong> to:<br><br>
+    <strong>Account Name: </strong>Effective Altruism Australia (don't worry if it doesn't fit)<br>
     <strong>BSB:</strong> 083170<br>
     <strong>Account No:</strong> 306556167<br>
     <strong>Unique Reference Number:</strong> {{ pledge.reference }}
