Accept American Express. #92

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -280,7 +280,7 @@
                 What credit cards do you accept?
             </p>
             <p class="payment-faq-answer">
-                We accept Visa and Mastercard. Sorry, we do not accept American Express at this time.
+                We accept Visa, Mastercard and American Express.
             </p>
             <p class="payment-faq-question">
                 Are credit card donations secure?
