Show credit card split on accounting reconciliation page

--- a/donation/templates/reconciliation.html
+++ b/donation/templates/reconciliation.html
@@ -35,13 +35,19 @@
     <table>
         <th>Charity</th>
         <th style="text-align: right;">Bank</th>
-        <th style="text-align: right;">Credit card</th>
+        <th style="text-align: right;">Visa</th>
+        <th style="text-align: right;">Mastercard</th>
+        <th style="text-align: right;">AMEX</th>
+        <th style="text-align: right;">Credit card (total)</th>
         <th style="text-align: right;">Credit card (after fees)</th>
         <th style="text-align: right;">Total</th>
         {% for partner, partner_total in totals %}
         <tr>
             <td>{{ partner }}</td>
             <td style="text-align: right;">{{ partner_total.bank|floatformat:'2'|intcomma }}</td>
+            <td style="text-align: right;">{{ partner_total.visa|floatformat:'2'|intcomma }}</td>
+            <td style="text-align: right;">{{ partner_total.master|floatformat:'2'|intcomma }}</td>
+            <td style="text-align: right;">{{ partner_total.amex|floatformat:'2'|intcomma }}</td>
             <td style="text-align: right;">{{ partner_total.credit_card|floatformat:'2'|intcomma }}</td>
             <td style="text-align: right;">{{ partner_total.credit_card_after_fees|floatformat:'2'|intcomma }}</td>
             <td style="text-align: right;">{{ partner_total.total|floatformat:'2'|intcomma }}</td>
