--- a/donation/templates/reconciliation.html
+++ b/donation/templates/reconciliation.html
@@ -56,6 +56,9 @@
         <tr>
             <td><b>Total</b></td>
             <td style="text-align: right;"><b>{{ grand_total.bank|floatformat:'2'|intcomma }}</b></td>
+            <td style="text-align: right;"><b>{{ grand_total.visa|floatformat:'2'|intcomma }}</b></td>
+            <td style="text-align: right;"><b>{{ grand_total.master|floatformat:'2'|intcomma }}</b></td>
+            <td style="text-align: right;"><b>{{ grand_total.amex|floatformat:'2'|intcomma }}</b></td>
             <td style="text-align: right;"><b>{{ grand_total.credit_card|floatformat:'2'|intcomma }}</b></td>
             <td style="text-align: right;"><b>{{ grand_total.credit_card_after_fees|floatformat:'2'|intcomma }}</b></td>
             <td style="text-align: right;"><b>{{ grand_total.total|floatformat:'2'|intcomma }}</b></td>
