--- a/donation/templates/bank_transfer_instructions.html
+++ b/donation/templates/bank_transfer_instructions.html
@@ -2,7 +2,7 @@
 {% block content %}
     <p>Dear {{ pledge.first_name }},</p>
 
-    <p>You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of your
+    <p>You've completed the first step. Once you've completed the last step (below), we'll make sure your
         donation will go directly to helping people through {{ pledge.partner_charity_str }}, and send you a tax
         deductible receipt.</p>
 
