--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="donation-step [[step !== 1 ? 'collapse' : '']]" id="step-1">
-        <h2>100% of your donation will be granted to the charity of your choice</h2>
+        <h2>Your donation will be granted to the charity of your choice</h2>
         <h3>Select a charity:</h3>
         <div class="charities-container">
             [[#charities:i]]
@@ -318,7 +318,7 @@
         <div class="payment_option [[pmt_method != '3' ? 'collapse' : '' ]]">
             <h2>Thank you [[ name ]]!</h2>
             <p>
-                100% of your donation will be granted to [[ selected_charity.name ]].
+                Your donation will be granted to [[ selected_charity.name ]].
             </p>
             <div class="complete-other-info">
                 <p>Here is your <a href="[[receipt_url]]" download target="_blank">receipt</a>. We have also emailed it to you &ndash; please check your spam folder if you have not received it.</p>
@@ -337,7 +337,7 @@
         <div class="payment_option [[pmt_method != '1' ? 'collapse' : '' ]]">
             <h2>Thank you [[ name ]]!</h2>
             <p>
-                100% of your donation will be granted to [[ selected_charity.name ]].
+                Your donation will be granted to [[ selected_charity.name ]].
             </p>
             <div class="complete-next-steps">
                 <h3>What to do next?</h3>
