--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -397,7 +397,7 @@
  helvetica, sans-serif;line-height:21px;color:#333333;"><br></p>
                                                                 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
                                                                     <a target="_blank"
-                                                                       href="http://https://effectivealtruism.org.au"
+                                                                       href="https://effectivealtruism.org.au"
                                                                        style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;">Effective
                                                                         Altruism Australia</a></p></td>
                                                         </tr>
