Remove errant space in template

--- a/donation/templates/receipts/receipt_message.html
+++ b/donation/templates/receipts/receipt_message.html
@@ -2,8 +2,8 @@
 {% block content %}
     Dear {{ pledge.first_name }},
     <br/><br/>
-    Thank you so much for your donation to Effective Altruism Australia, designated for {{ pledge.partner_charity_str }}
-    . We confirm that we received the sum of ${{ transaction.amount }} on {{ date_str }}. Please find attached your
+    Thank you so much for your donation to Effective Altruism Australia, designated for {{ pledge.partner_charity_str }}.
+    We confirm that we received the sum of ${{ transaction.amount }} on {{ date_str }}. Please find attached your
     receipt.
 <br/><br/>
     For your convenience, we will also send you an end of financial year receipt by {{ eofy_receipt_date }}. Please feel
